k8s/irviquiz-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: irviquiz-api
  namespace: irviquiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: irviquiz-api
  template:
    metadata:
      labels:
        app: irviquiz-api
    spec:
      containers:
      - name: irviquiz-api
        image: irvids/irviquiz-api:20250731004945
        ports:
        - containerPort: 5036
---
apiVersion: v1
kind: Service
metadata:
  name: irviquiz-api
  namespace: irviquiz
spec:
  selector:
    app: irviquiz-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5036
  type: ClusterIP
