k8s/irviquiz-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: irviquiz-web
  namespace: irviquiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: irviquiz-web
  template:
    metadata:
      labels:
        app: irviquiz-web
    spec:
      containers:
      - name: irviquiz-web
        image: irvids/irviquiz-web:20250728165714
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: irviquiz-web
  namespace: irviquiz
spec:
  selector:
    app: irviquiz-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
