k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: irviquiz-api-ingress
  namespace: irviquiz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: quiz.yrwing.com.br
      http:
        paths:
          - path: /api(/.*|$)
            pathType: ImplementationSpecific
            backend:
              service:
                name: irviquiz-api
                port:
                  number: 80
