k8s/ingress-irviquiz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: irviquiz-ingress
  namespace: irviquiz
spec:
  ingressClassName: nginx
  rules:
    - host: "" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: irviquiz-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: irviquiz-api
                port:
                  number: 80
